HW 14 fixed aside covering header

--- a/14-positioning/assets/css/style.scss
+++ b/14-positioning/assets/css/style.scss
@@ -153,6 +153,7 @@ header {
 // Aside
 aside {
     position: sticky;
+    z-index: -1;
 
     a {
         font-family: 'Francois One', sans-serif;
